# libasyncnet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  asyncnet-config.cmake.in  asyncnet.pc.in  vcpkg.json
cmake/: FindCURLpp.cmake  Findlibcoro.cmake
examples/: CMakeLists.txt
include/asyncnet/: AsyncQueue.hpp  AsyncSession.hpp  Asyncnet.hpp  CancellingTask.hpp  Exceptions.hpp  JsonConversions.hpp  NetTypes.hpp  NetworkRequestor.hpp  NetworkTask.hpp  Request.hpp  Requestor.hpp  Response.hpp  UrlSession.hpp
include/asyncnet/detail/: Concepts.hpp  Format.hpp
src/: AsyncSession.cpp  Asyncnet.cpp  CancellingTask.cpp  NetTypes.cpp  NetworkRequestor.cpp  NetworkTask.cpp  Request.cpp  Requestor.cpp  Response.cpp  UrlSession.cpp
tests/: CMakeLists.txt  UrlSession_test.cpp  catch_amalgamated.cpp  json_test.cpp  net_types_test.cpp  networkRequestor_test.cpp  queue_test.cpp  request_test.cpp  requestor_test.cpp  session_test.cpp
